@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2020 the original author or authors.
+ * Copyright 2018-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,9 +30,12 @@ import org.springframework.util.Assert;
  *
  * @author Gary Russell
  * @since 2.1.3
+ * @deprecated Refer to the {@link ChainedTransactionManager} javadocs.
  *
  */
-public class ChainedKafkaTransactionManager<K, V> extends ChainedTransactionManager implements KafkaAwareTransactionManager<K, V> {
+@Deprecated
+public class ChainedKafkaTransactionManager<K, V> extends ChainedTransactionManager
+		implements KafkaAwareTransactionManager<K, V> {
 
 	private final KafkaAwareTransactionManager<K, V> kafkaTransactionManager;
 
